frontend/test/should_pass/bitbucket18.gm
node class MyNode {
    procedure myProcedure(){
        def ref myArray:array<string> = array<string>[];
        return();
    }
}