frontend/test/should_fail/computations_no_assign_func_method2.gm
node class N
{
	x:array<int>;
	
	function bar() : int
	{
		this.x[0] = 42;
		return(this.x[0]);
	}
}
